Correct wrapping issue with paper-plane

--- a/include/themes/paper-plane/main.css
+++ b/include/themes/paper-plane/main.css
@@ -1769,7 +1769,7 @@ div#gtabs {
 
 .usertabs {
 	float: right !important;
-	width: 55px !important;
+	width: 65px !important;
 	overflow: hidden;
 	right: 0;
 }
